--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
 
+
+<!DOCTYPE html>
+<html lang="uk">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./favicon/site.webmanifest" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <script src="./js/script.js"></script>
+  <title>Home work #9</title>
+</head>
+
+<body>
+  <header class="header">
+    <h1>Home work #9</h1>
+    <p class="autor">Хомич Любов</p>
+  </header>
+  <main class="main">
+    <h2>HW9 - "Просунута робота з функціями (2)"</h2>
+    <article>
+      <h2>Звіт</h2>
+      <p>
+        <a href="./pages/task-1.html" target="_blank">Завдання 1. Напишіть функцію detonatorTimer(delay) використовуючи setInterval.</a>
+      </p>
+      <p>
+        <a href="./pages/task-2.html" target="_blank">Завдання 2. Напишіть функцію detonatorTimer(delay) використовуючи вкладений setTimeout.</a>
+      </p>
+      <p>
+        <a href="./pages/task-3.html" target="_blank">Завдання 3. Напишіть об'єкт в якому опишіть свої довільні властивості та довільні методи що ці властивості виводять.</a>
+      </p>
+      <p>
+        <a href="./pages/task-4.html" target="_blank">Завдання 4. А тепер зробіть всі свої методи з попередньої задачі прив'язаними до контексту свого об'єкту.</a>
+      </p>
+    </article>
+  </main>
+</body>
+
+</html>
